process multiple configuration write source_uuid to info.xml file to track uuid

--- a/backup.cfg
+++ b/backup.cfg
@@ -5,3 +5,12 @@ target_mountpoint = /var/run/media/awerner/btrfs_backup
 target_path = backup/root
 target_uuid = ed918d69-3e7a-4798-bf83-cb9ad49b6d10
 target_min_space = 20
+
+[home]
+source_mountpoint = /home
+source_path = .snapshots
+target_mountpoint = /var/run/media/awerner/btrfs_backup
+target_path = backup/home
+target_uuid = ed918d69-3e7a-4798-bf83-cb9ad49b6d10
+target_min_space = 20
+
